--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: Gerenciando máquinas virtuales </li>
          <li> Docker: creando un container sin dolor de cabezas </li>
-         <li> Ansible: Infraestructura del código </li>
+         <li> Ansible </li>
          <li> Kubernetes </li>
          <li> Integración continua: Madurez y Productividad en el Desarrollo de Software</li>
      </ul>
