--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> Vagrant: Gerenciando máquinas virtuales </li>
          <li> Docker: creando un container sin dolor de cabezas </li>
          <li> Ansible </li>
-         <li> Kubernetes </li>
+         <li> Kubernetes: Introducción a la orquestación de containers </li>
          <li> Integración continua: Madurez y Productividad en el Desarrollo de Software</li>
      </ul>
 </body>
